# calibrator

./: CMakeLists.txt  Readme.md
source/: opencv_calibrate_inner.cpp  opencv_calibrate_outer.cpp  opencv_calibrate_uvc_outer.cpp  opencv_cap_picture.cpp  opencv_point_det.cpp
source/3rd_interface/ffmpeg/: ffmpeg_sws.cpp  ffmpeg_sws.h
source/3rd_interface/opencv/: opencv_mat.cpp  opencv_mat.h
source/camera/: camera.h
source/camera/camera_6124/: camera_6124.cpp  camera_6124.h
source/camera/camera_gc2053/: camera_gc2053.cpp  camera_gc2053.h
source/camera/camera_uvc/: camera_uvc.cpp  camera_uvc.h
source/framebuffer/: framebuffer.cpp  framebuffer.h
